# iron-curtain

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE-INDEX.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ci  ci-local.ps1  ci-local.sh  ci.cmd  ci.ps1  clippy.toml  deny.toml  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: audit.yml  ci.yml  dco.yml
config/: iron-curtain.default.toml
crates/ic-cnc-content/: Cargo.toml
crates/ic-cnc-content/src/: lib.rs  tests.rs
crates/ic-cnc-content/src/aud/: mod.rs  tests.rs
crates/ic-cnc-content/src/meg/: mod.rs  tests.rs
crates/ic-cnc-content/src/miniyaml/: mod.rs  tests.rs
crates/ic-cnc-content/src/mix/: mod.rs  tests.rs
crates/ic-cnc-content/src/pal/: mod.rs  tests.rs
crates/ic-cnc-content/src/shp/: mod.rs  tests.rs
crates/ic-cnc-content/src/source/: mod.rs  tests.rs
crates/ic-cnc-content/src/vqa/: mod.rs  tests.rs
crates/ic-game/: Cargo.toml
crates/ic-game/assets/shaders/: scanlines.wgsl
crates/ic-game/src/: allocator.rs  config.rs  demo.rs  lib.rs  main.rs  tests.rs
crates/ic-game/src/content_window/: catalog.rs  debug_overlay.rs  gallery.rs  mod.rs  preview.rs  preview_audio.rs  preview_decode.rs  state.rs  tests.rs  vqa_stream.rs
crates/ic-protocol/: Cargo.toml
crates/ic-protocol/src/: lib.rs  tests.rs
crates/ic-render/: Cargo.toml
crates/ic-render/src/: lib.rs  tests.rs
crates/ic-render/src/camera/: mod.rs  tests.rs
crates/ic-render/src/scene/: mod.rs  tests.rs
crates/ic-render/src/sprite/: mod.rs  tests.rs
crates/ra-formats/: Cargo.toml
crates/ra-formats/src/: lib.rs
docs/design-gap-requests/: DG001-remastered-bk2-support-boundary.md  DG002-media-container-and-localization-packaging-strategy.md
