# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (c) 2025–present Iron Curtain contributors

[package]
name = "ic-game"
version = "0.1.0"
description = "Iron Curtain bootstrap game client"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "default_app",
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "std",
    "sysinfo_plugin",
    "x11",
] }
hound = "3.5"
ic-cnc-content = { path = "../ic-cnc-content" }
ic-render = { path = "../ic-render" }
serde = { workspace = true }
sysinfo = "0.38.4"
thiserror = "2.0.18"
toml = "0.9.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1.43"

[target.'cfg(windows)'.dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_audio",
    "wav",
] }
