# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (c) 2025–present Iron Curtain contributors

[package]
name = "ic-protocol"
version = "0.1.0"
description = "Shared wire types for the Iron Curtain RTS engine (sim↔net boundary)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_yaml = "0.9"
