# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (c) 2025–present Iron Curtain contributors

[package]
name = "ra-formats"
version = "0.1.0"
description = "Red Alert / C&C file format parsers for the Iron Curtain engine"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cnc-formats = { workspace = true }
